--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "astrox",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -34,5 +34,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "framer-motion": "^8.5.5",
+    "react-countup": "^6.4.2",
+    "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.5.2",
+    "react-scroll": "^1.8.9",
+    "react-type-animation": "^2.1.2",
+    "tailwindcss": "^3.3.2"
   }
 }
