--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "astrox",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://solomdev00.github.io/AstroX",
+  "homepage": "https://solomdev00.github.io/AstroX_Website",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
